2002-09-30  Christopher Faylor  <cgf@redhat.com>

	Remove \n from calls to strace class printfs throughout.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (unused_sig_wrapper): Accommodate newer compilers.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* security.cc (allow_ntsec): Default to zero.
	* environ.cc (environ_init): Set allow_ntsec to TRUE by default,
	assuming OS allows it.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* environ.cc (environ_init): Avoid a compiler warning.
	* path.cc (path_conv::check): Ditto.
	* path.h (path_conv::operator int): Ditto.
	* regex/engine.c: Ditto throughout.
	* regex/regcomp.c: Ditto throughout.
	* regex/regexec.c: Ditto throughout.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* thread.cc: Use "%E" in *_printf throughout rather than calling
	GetLastError.  GNUify comments.
	(__pthread_mutex_lock): Don't return error on EBUSY since that just
	means that the mutex has already been initialized.

2002-09-30  Robert Collins <rbtcollins@hotmail.com>

	* pthread.cc (pthread_mutex_init): Use new pthread_mutex::init.
	* thread.cc: Change __pthread_mutex_init to pthread_mutex::init
	throughout.
       	(MTinterface::Init): Initialise pthread_mutex support.
	(pthread_mutex::mutexInitializationLock): Instantiate.
	(pthread_mutex::initMutex): New method.
	(__pthread_cond_dowait): Don't dereference untrusted pointers.
	Use the new pthread_mutex::init method.
	(__pthread_condattr_init): Don't dereference untrusted pointers.
	(__pthread_mutex_init): Rename to pthread_mutex::init.
	Lock and release mutexInitializationLock to prevent races on
	mutex initialisation.
	* thread.h (pthread_mutex::initMutex): New method, initialise 
	pthread_mutex supporting state on process initialisation.
	(pthread_mutex::init): Initialise a single mutex.
	(pthread_mutex::mutexInitializationLock): A win32 mutex for
	syncronising pthread mutex initialisation.
	(__pthread_mutex_init): Remove this.
